--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,10 +1,6 @@
 .hero {
-  display: flex;
   max-width: 1600px;
-  padding: 200px;
   margin: 0 auto;
-  align-items: center;
-
   background: #c4c4c4;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -14,8 +10,10 @@
   background-position: center;
   background-size: cover;
   &__container {
+    margin: 0 auto;
+    padding: 200px 0;
+
     text-align: center;
-    align-items: center;
   }
 
   &__title {
