--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./base/container";
 @import "./utils/variables";
 @import "./utils/mixin";
+@import "./utils/placeholders";
 @import "./components/title-hidden";
 @import "./components/logo";
 @import "./components/social-links";
