--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -14,6 +14,7 @@
     height: 20px;
   }
   &__link {
+    @extend %link;
     display: flex;
     align-items: center;
     justify-content: center;
