--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -26,6 +26,8 @@
 }
 
 .header__link {
+  @extend %link;
+
   display: block;
 
   padding-top: 32px;
@@ -87,6 +89,7 @@
   }
 
   &__link {
+    @extend %link;
     display: flex;
     align-items: center;
     font-size: 14px;
