--- a/sass/layout/_portfolio-card.scss
+++ b/sass/layout/_portfolio-card.scss
@@ -12,6 +12,7 @@
   }
 
   &__link {
+    @extend %link;
     display: block;
     background: #ffffff;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
