--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -6,6 +6,7 @@ h5,
 h6,
 p {
   margin: 0;
+  padding: 0;
 }
 
 .list {
@@ -28,10 +29,18 @@ body {
   color: var(--color-txt);
 }
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
