--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,7 +1,18 @@
 .container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  margin: 0 auto;
+
+  // 480 +
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    max-width: 480px;
+  }
+  // 768+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    max-width: 768px;
+  }
+  // 1200+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
