--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,31 +1,77 @@
 .team {
   background: var(--bgr-team-button-portfolio);
 
-  &__list {
-    display: flex;
-    margin-left: -30px;
-    margin-top: -30px;
-  }
   &__item {
-    margin-left: 30px;
-    margin-top: 30px;
-
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
   }
-  &__description {
-    padding-top: 30px;
-    padding-bottom: 30px;
-  }
   &__title {
-    @include title-h2();
+    @include title-h2($mb: 30px, $fs: 28px, $lh: 33px);
   }
   &__name {
     @include team-name-text();
   }
   &__txt {
     @include team-name-text($mb: 16px, $fw: 400, $color: var(--color-txt));
+  }
+  &__description {
+    padding-top: 30px;
+    padding-bottom: 24px;
+  }
+  @media screen and (max-width: 767px) {
+    &__item:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    &__item {
+      flex-basis: calc(100% / 2 - var(--card-set-gap-tablet));
+    }
+    &__item:nth-child(2n-1) {
+      margin-right: 30px;
+    }
+    &__item:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    &__list {
+      display: flex;
+      margin-left: -30px;
+      margin-top: -30px;
+    }
+    &__item {
+      margin-left: 30px;
+      margin-top: 30px;
+      &__title {
+        @include title-h2();
+      }
+      background: var(--bgr-team-button-portfolio);
+      background: #ffffff;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 0px 0px 4px 4px;
+    }
+    &__description {
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
+    &__title {
+      @include title-h2($mb: 30px, $fs: 28px, $lh: 33px);
+    }
+
+    &__name {
+      @include team-name-text();
+    }
+    &__txt {
+      @include team-name-text($mb: 16px, $fw: 400, $color: var(--color-txt));
+    }
   }
 }
