--- a/sass/layout/_the-best.scss
+++ b/sass/layout/_the-best.scss
@@ -1,16 +1,12 @@
 .the-best {
-  &__list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: calc(-1 * var(--card-set-gap));
-  }
-  &__item {
-    flex-basis: calc((100% - 4 * var(--card-set-gap)) / 4);
-    margin-left: var(--card-set-gap);
-  }
+  @media screen and (max-width: 767px) {
+    &__title {
+      @include title-h3($t-align: center);
+    }
 
-  &__title {
-    @include title-h3();
+    &__item:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
 
   &__txt {
@@ -26,7 +22,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 4px;
-    padding: 25px;
+    padding: 25px 0;
     background-color: #f5f4fa;
   }
 
@@ -34,5 +30,37 @@
     display: flex;
     width: 70px;
     height: 70px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    &__item {
+      flex-basis: calc(100% / 2 - var(--card-set-gap-tablet));
+    }
+    &__item:nth-child(2n-1) {
+      margin-right: 30px;
+    }
+    &__item:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+    &__title {
+      @include title-h3();
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &__list {
+      display: flex;
+      margin-left: calc(-1 * var(--card-set-gap));
+    }
+    &__item {
+      flex-basis: calc((100% - 4 * var(--card-set-gap)) / 4);
+      margin-left: var(--card-set-gap);
+    }
+    &__title {
+      @include title-h3();
+    }
   }
 }
