--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -12,4 +12,5 @@
   --stroke-card-portfolio: #eeeeee;
   --contact-footer: rgba(255, 255, 255, 0.6);
   --card-set-gap: 30px;
+  --card-set-gap-tablet: 15px;
 }
