--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ img {
   --card-set-gap-tablet: 15px;
 }
 
-.logo, .soc__link, .header__link, .header-contact__link, .portfolio-card__link, .contact, .contact-map {
+.logo, .soc__link, .header__link, .header-contact__link, .portfolio-card__link, .section-footer .contact, .section-footer .contact-map {
   text-decoration: none;
   color: currentColor;
 }
@@ -220,10 +220,15 @@ img {
 }
 
 .subscribe-input-btn-box {
-  display: flex;
   margin: 0;
   fill: #ffffff;
   justify-content: space-between;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-input-btn-box {
+    display: flex;
+  }
 }
 
 .submit-icon-plane-send {
@@ -918,57 +923,91 @@ img {
   }
 }
 
+.customers__list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.customers__item {
+  flex-basis: calc(100% / 2 - var(--card-set-gap-tablet));
+  height: 92px;
+  align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+  .customers__item:nth-child(2n-1) {
+    margin-right: 30px;
+  }
+  .customers__item:not(:nth-last-child(-n + 2)) {
+    margin-bottom: 30px;
+  }
+}
+
+.customers__title {
+  justify-content: center;
+  margin-bottom: 30px;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--color-title);
+}
+
+.customers__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  fill: #afb1b8;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers__link:hover, .customers__link:focus {
+  fill: var(--color-accent);
+  border: 1px solid var(--color-accent);
+}
+
+.customers__icon {
+  display: flex;
+}
+
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .customers__list {
+    margin-left: calc(-1 * var(--card-set-gap));
+  }
+  .customers__item {
     display: flex;
+    flex-basis: calc((100% - 3 * var(--card-set-gap)) / 3);
+    margin-left: var(--card-set-gap);
+  }
+  .customers__item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .customers__list {
     margin-left: calc(-1 * var(--card-set-gap));
   }
   .customers__item {
     display: flex;
     flex-basis: calc((100% - 6 * var(--card-set-gap)) / 6);
     margin-left: var(--card-set-gap);
-    height: 92px;
-    align-items: center;
-  }
-  .customers__title {
-    justify-content: center;
-    margin-bottom: 50px;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-align: center;
-    color: var(--color-title);
-  }
-  .customers__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    fill: #afb1b8;
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .customers__link:hover, .customers__link:focus {
-    fill: var(--color-accent);
-    border: 1px solid var(--color-accent);
-  }
-  .customers__icon {
-    display: flex;
   }
 }
 
 .portfolio-button__list {
   display: flex;
-  margin: 0 auto;
-  margin-bottom: 50px;
-  justify-content: center;
-  text-align: center;
+  margin-bottom: 56px;
+  flex-wrap: wrap;
 }
 
 .portfolio-button__appearance {
+  margin-bottom: 15px;
   padding: 6px 22px;
   border-radius: 4px;
   font-family: var(--main-font);
@@ -990,8 +1029,14 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-button__item:not(:first-child) {
-  margin-left: 8px;
+.portfolio-button__item:not(:last-child) {
+  margin-right: 8px;
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-button__list {
+    justify-content: center;
+  }
 }
 
 .portfolio-card__list {
@@ -1078,22 +1123,7 @@ img {
   background: var(--background-hero-footer);
 }
 
-.container-footer {
-  display: flex;
-  align-items: baseline;
-}
-
-.adress-footer-box {
-  margin-right: 70px;
-  max-width: 231px;
-}
-
-.contact-list {
-  display: block;
-  margin-bottom: 9px;
-}
-
-.contact {
+.section-footer .contact {
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -1104,11 +1134,11 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact:hover, .contact:focus {
+.section-footer .contact:hover, .section-footer .contact:focus {
   color: var(--color-accent);
 }
 
-.contact-map {
+.section-footer .contact-map {
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -1120,15 +1150,15 @@ img {
   color: #ffffff;
 }
 
-.contact-map:hover, .contact-map:focus {
+.section-footer .contact-map:hover, .section-footer .contact-map:focus {
   color: var(--color-accent);
 }
 
-.subscribe-form {
+.section-footer .subscribe-form {
   margin-left: auto;
 }
 
-.subscribe-form__title {
+.section-footer .subscribe-form__title {
   display: inline-block;
   width: 100%;
   margin-top: 0px;
@@ -1142,10 +1172,10 @@ img {
   color: #ffffff;
 }
 
-.subscribe-form-input {
+.section-footer .subscribe-form-input {
   margin-right: 12px;
   padding-left: 15px;
-  width: 358px;
+  width: 100%;
   height: 50px;
   font-size: 16px;
   line-height: 1.25;
@@ -1158,7 +1188,31 @@ img {
   outline: none;
 }
 
-.subscribe-form-input::placeholder {
+.section-footer .subscribe-form-input::placeholder {
   color: rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .container-footer {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-footer {
+    display: flex;
+    align-items: baseline;
+  }
+  .adress-footer-box {
+    margin-right: 70px;
+    max-width: 231px;
+  }
+  .contact-list {
+    display: block;
+    margin-bottom: 9px;
+  }
+  -input {
+    width: 358px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
