--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -28,13 +28,17 @@
     background-color: var(--color-accent-dark);
   }
 }
-
 .subscribe-input-btn-box {
-  display: flex;
   margin: 0;
   fill: #ffffff;
   justify-content: space-between;
 }
+@media screen and (min-width: 1200px) {
+  .subscribe-input-btn-box {
+    display: flex;
+  }
+}
+
 .submit-icon-plane-send {
   margin-left: 10px;
 }
