--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -1,40 +1,70 @@
 .customers {
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__item {
+    flex-basis: calc(100% / 2 - var(--card-set-gap-tablet));
+    height: 92px;
+    align-items: center;
+  }
+
+  @media screen and (max-width: 767px) {
+    &__item:nth-child(2n-1) {
+      margin-right: 30px;
+    }
+    &__item:not(:nth-last-child(-n + 2)) {
+      margin-bottom: 30px;
+    }
+  }
+
+  &__title {
+    @include title-h2($mb: 30px, $fs: 28px, $lh: 33px);
+  }
+
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    fill: #afb1b8;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      fill: var(--color-accent);
+      border: 1px solid var(--color-accent);
+    }
+  }
+
+  &__icon {
+    display: flex;
+  }
+
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     &__list {
+      margin-left: calc(-1 * var(--card-set-gap));
+    }
+    &__item {
       display: flex;
+      flex-basis: calc((100% - 3 * var(--card-set-gap)) / 3);
+      margin-left: var(--card-set-gap);
+    }
+    &__item:not(:nth-last-child(-n + 3)) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    &__list {
       margin-left: calc(-1 * var(--card-set-gap));
     }
     &__item {
       display: flex;
       flex-basis: calc((100% - 6 * var(--card-set-gap)) / 6);
       margin-left: var(--card-set-gap);
-      height: 92px;
-      align-items: center;
-    }
-    &__title {
-      @include title-h2();
-    }
-
-    &__link {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 100%;
-      fill: #afb1b8;
-      border: 1px solid #afb1b8;
-      border-radius: 4px;
-      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      &:hover,
-      &:focus {
-        fill: var(--color-accent);
-        border: 1px solid var(--color-accent);
-      }
-    }
-
-    &__icon {
-      display: flex;
     }
   }
 }
