--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,66 +2,76 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background: var(--background-hero-footer);
-}
-.container-footer {
-  display: flex;
-  align-items: baseline;
-}
-
-.adress-footer-box {
-  margin-right: 70px;
-  max-width: 231px;
-}
-
-.contact-list {
-  display: block;
-  margin-bottom: 9px;
-}
-.contact {
-  @extend %link;
-  @include contact;
-
-  &:hover,
-  &:focus {
-    color: var(--color-accent);
-  }
-  &-map {
+  .contact {
     @extend %link;
     @include contact;
-    color: #ffffff;
 
     &:hover,
     &:focus {
       color: var(--color-accent);
     }
+    &-map {
+      @extend %link;
+      @include contact;
+      color: #ffffff;
+
+      &:hover,
+      &:focus {
+        color: var(--color-accent);
+      }
+    }
+  }
+  .subscribe-form {
+    margin-left: auto;
+    &__title {
+      display: inline-block;
+      width: 100%;
+      @include title-h3($mt: 0px, $mb: 20px, $color: #ffffff);
+    }
+    &-input {
+      margin-right: 12px;
+      padding-left: 15px;
+      width: 100%;
+      height: 50px;
+
+      font-size: 16px;
+      line-height: 1.25;
+      letter-spacing: 0.03em;
+      color: #ffffff;
+
+      background-color: transparent;
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
+      border-radius: 4px;
+      outline: none;
+      &::placeholder {
+        color: rgba(255, 255, 255, 0.6);
+      }
+    }
   }
 }
 
-.subscribe-form {
-  margin-left: auto;
-  &__title {
-    display: inline-block;
-    width: 100%;
-    @include title-h3($mt: 0px, $mb: 20px, $color: #ffffff);
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .container-footer {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-footer {
+    display: flex;
+    align-items: baseline;
+  }
+  .adress-footer-box {
+    margin-right: 70px;
+    max-width: 231px;
+  }
+
+  .contact-list {
+    display: block;
+    margin-bottom: 9px;
   }
   &-input {
-    margin-right: 12px;
-    padding-left: 15px;
     width: 358px;
-    height: 50px;
-
-    font-size: 16px;
-    line-height: 1.25;
-    letter-spacing: 0.03em;
-    color: #ffffff;
-
-    background-color: transparent;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    outline: none;
-    &::placeholder {
-      color: rgba(255, 255, 255, 0.6);
-    }
   }
 }
