--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -21,8 +21,19 @@
   }
 
   &-footer {
-    display: block;
+    text-align: center;
     margin-bottom: 20px;
+    display: block;
+    @media screen and (max-width: 767px) {
+      .logo {
+        font-size: 24px;
+        line-height: 1.17;
+      }
+    }
+
+    @media screen and (min-width: 768px) {
+      display: block;
+    }
   }
   &__studio {
     color: #ffffff;
