--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,58 +2,80 @@
   padding-top: 60px;
   padding-bottom: 60px;
   background: var(--background-hero-footer);
-  .contact {
+}
+
+.adress-footer-box {
+  text-align: center;
+  margin-bottom: 60px;
+}
+// @media screen and (max-width: 767px) {
+.soc {
+  &__title {
+    margin-top: 0;
+    text-align: center;
+  }
+}
+.subscribe-form__title {
+  text-align: center;
+}
+.subscribe-form-input {
+  margin-bottom: 20px;
+}
+// }
+.contact {
+  @extend %link;
+  @include contact;
+
+  &:hover,
+  &:focus {
+    color: var(--color-accent);
+  }
+  &-map {
     @extend %link;
     @include contact;
+    color: #ffffff;
 
     &:hover,
     &:focus {
       color: var(--color-accent);
     }
-    &-map {
-      @extend %link;
-      @include contact;
-      color: #ffffff;
-
-      &:hover,
-      &:focus {
-        color: var(--color-accent);
-      }
-    }
   }
-  .subscribe-form {
-    margin-left: auto;
-    &__title {
-      display: inline-block;
-      width: 100%;
-      @include title-h3($mt: 0px, $mb: 20px, $color: #ffffff);
-    }
-    &-input {
-      margin-right: 12px;
-      padding-left: 15px;
-      width: 100%;
-      height: 50px;
+}
+.subscribe-form {
+  margin-top: 60px;
+  &__title {
+    display: inline-block;
+    width: 100%;
+    @include title-h3($mt: 0px, $mb: 20px, $t-align: center, $color: #ffffff);
+  }
+  &-input {
+    margin-right: 12px;
+    padding-left: 15px;
+    width: 100%;
+    height: 50px;
 
-      font-size: 16px;
-      line-height: 1.25;
-      letter-spacing: 0.03em;
-      color: #ffffff;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: #ffffff;
 
-      background-color: transparent;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
-      border-radius: 4px;
-      outline: none;
-      &::placeholder {
-        color: rgba(255, 255, 255, 0.6);
-      }
+    background-color: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    outline: none;
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.6);
     }
   }
 }
-
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .container-footer {
     display: flex;
+  }
+  .subscribe-form {
+    display: block;
+    margin-left: auto;
   }
 }
 
@@ -62,6 +84,7 @@
     display: flex;
     align-items: baseline;
   }
+
   .adress-footer-box {
     margin-right: 70px;
     max-width: 231px;
@@ -71,7 +94,15 @@
     display: block;
     margin-bottom: 9px;
   }
-  &-input {
-    width: 358px;
+  .subscribe-form {
+    margin-left: auto;
+    &__title {
+      display: inline-block;
+      width: 100%;
+      @include title-h3($mt: 0px, $mb: 20px, $color: #ffffff);
+    }
+    &-input {
+      width: 358px;
+    }
   }
 }
