--- a/css/main.css
+++ b/css/main.css
@@ -122,8 +122,16 @@ img {
   color: var(--color-accent);
 }
 
-.logo-header {
-  margin-right: 93px;
+@media screen and (min-width: 768px) {
+  .logo-header {
+    margin-right: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-header {
+    margin-right: 93px;
+  }
 }
 
 .logo-footer {
@@ -142,6 +150,12 @@ img {
 @media screen and (min-width: 768px) {
   .logo-footer {
     display: block;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-footer {
+    text-align: left;
   }
 }
 
@@ -266,16 +280,32 @@ img {
   pointer-events: none;
 }
 
-.backdrop .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #ffffff;
-  max-width: 528px;
-  height: 581px;
-  border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+@media screen and (max-width: 1199px) {
+  .backdrop .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    max-width: 450px;
+    height: 609px;
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    max-width: 528px;
+    height: 581px;
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .close-button {
@@ -303,11 +333,19 @@ img {
   fill: var(--color-accent);
 }
 
+@media screen and (max-width: 1199px) {
+  .input-data-form {
+    padding-left: 40px;
+    width: 370px;
+    height: 40px;
+  }
+}
+
 .modal-form {
   display: inline-block;
   padding-top: 40px;
-  padding-left: 41px;
-  padding-right: 39px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .modal-form-title {
@@ -356,13 +394,15 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-data-form {
-  padding-left: 42px;
-  width: 448px;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 1200px) {
+  .input-data-form {
+    padding-left: 42px;
+    width: 448px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .input-data-form:focus ~ .user-icon-form,
@@ -483,7 +523,7 @@ img {
   left: 0;
   top: 0;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   background-color: #ffff;
   z-index: 100;
   opacity: 0;
@@ -503,10 +543,9 @@ img {
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  height: 100%;
-  padding-top: 48px;
+  padding-top: 38px;
   padding-left: 40px;
-  padding-bottom: 48px;
+  padding-bottom: 38px;
 }
 
 .mobile-menu__close-btn {
@@ -538,13 +577,13 @@ img {
 }
 
 .mobile-menu__item:not(:last-child) {
-  margin-bottom: 32px;
+  margin-bottom: 22px;
 }
 
 .mobile-menu__link {
   font-weight: 500;
-  font-size: 40px;
-  line-height: 1.18;
+  font-size: 30px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--color-title);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -559,20 +598,20 @@ img {
 }
 
 .mobile-menu__contact-list {
-  margin-bottom: 64px;
+  margin-bottom: 44px;
 }
 
 .mobile-menu__contact-item:not(:last-child) {
-  margin-bottom: 32px;
+  margin-bottom: 10px;
 }
 
 .mobile-menu__contact-link {
   font-weight: 500;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--color-title);
-  margin-bottom: 32px;
+  margin-bottom: 22px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -582,7 +621,7 @@ img {
 
 .mobile-menu__contact-link-tel {
   font-weight: 500;
-  font-size: 34px;
+  font-size: 24px;
   line-height: 1.18;
   letter-spacing: 0.02em;
   color: var(--color-accent);
@@ -596,73 +635,159 @@ img {
   color: var(--color-accent);
 }
 
-.mobile-menu__soc-item:not(:first-child)::after {
-  position: absolute;
-  top: 0;
-  transform: translateX(-10px);
-  display: block;
-  content: "";
-  width: 1px;
-  height: 22px;
-  background-color: rgba(33, 33, 33, 0.2);
-  flex-shrink: 0;
-  margin-right: 40px;
-}
-
 .mobile-menu__soc-list {
   position: relative;
-  display: flex;
 }
 
-.mobile-menu__soc-item:not(:last-child) {
-  margin-right: 20px;
-}
-
-@media screen and (max-width: 479px) {
+@media screen and (min-width: 390px) and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffff;
+    z-index: 100;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
   .mobile-menu__container {
-    padding-top: 30px;
-    padding-left: 30px;
-    padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    padding-top: 38px;
+    padding-left: 40px;
+    padding-bottom: 38px;
   }
-  .mobile-menu__link {
-    font-size: 30px;
-    line-height: 1.16;
+  .mobile-menu__close-btn {
+    position: absolute;
+    top: 25px;
+    right: 26px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+    width: 19px;
+    height: 19px;
   }
-  .mobile-menu__contact-list {
-    margin-bottom: 44px;
+  .mobile-menu__icon {
+    width: 19px;
+    height: 19px;
+    fill: var(--color-title);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .mobile-menu__contact-item:not(:last-child) {
-    margin-bottom: 10px;
+  .mobile-menu__icon:hover, .mobile-menu__icon:focus {
+    fill: var(--color-accent);
   }
-  .mobile-menu__contact-link {
-    font-size: 20px;
+  .mobile-menu__item:not(:last-child) {
     margin-bottom: 22px;
   }
+  .mobile-menu__link {
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 1.12;
+    letter-spacing: 0.02em;
+    color: var(--color-title);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu__link:hover, .mobile-menu__link:focus {
+    color: var(--color-accent);
+  }
+  .mobile-menu__link_current {
+    color: var(--color-accent);
+  }
+  .mobile-menu__contact-list {
+    margin-bottom: 54px;
+  }
+  .mobile-menu__contact-item:not(:last-child) {
+    margin-bottom: 22px;
+  }
+  .mobile-menu__contact-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--color-title);
+    margin-bottom: 22px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu__contact-link:hover, .mobile-menu__contact-link:focus {
+    color: var(--color-accent);
+  }
   .mobile-menu__contact-link-tel {
-    font-size: 24px;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: var(--color-accent);
   }
   .mobile-menu__soc-link {
-    font-size: 15px;
-  }
-  .mobile-menu__soc-item:not(:first-child) {
-    height: 18px;
-    margin-right: 38px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--color-accent);
   }
   .mobile-menu__soc-item:not(:last-child) {
-    margin-right: 16px;
+    margin-right: 20px;
+  }
+  .mobile-menu__soc-item:not(:first-child)::after {
+    position: absolute;
+    top: 0;
+    transform: translateX(-10px);
+    display: block;
+    content: "";
+    width: 1px;
+    height: 22px;
+    background-color: rgba(33, 33, 33, 0.2);
+    flex-shrink: 0;
+    margin-right: 40px;
+  }
+  .mobile-menu__soc-list {
+    position: relative;
+    display: flex;
   }
 }
 
-.backdrop .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #ffffff;
-  max-width: 528px;
-  height: 581px;
-  border-radius: 4px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+@media screen and (max-width: 1199px) {
+  .backdrop .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    max-width: 450px;
+    height: 609px;
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    max-width: 528px;
+    height: 581px;
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  }
 }
 
 .close-button {
@@ -690,38 +815,154 @@ img {
   fill: var(--color-accent);
 }
 
-.header__menu {
-  display: none;
+@media screen and (max-width: 767px) {
+  .header__menu {
+    display: none;
+  }
+  .header-contact__item {
+    display: none;
+  }
+  .header-contact__list {
+    display: none;
+  }
+  .header__mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  .burger-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+    cursor: pointer;
+  }
+  .burger-btn__icon {
+    width: 40px;
+    height: 40px;
+    fill: var(--color-title);
+  }
+  .burger-btn__icon:hover, .burger-btn__icon:focus {
+    fill: var(--color-accent);
+  }
 }
 
-.header-contact__item {
-  display: none;
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+  .burger-btn {
+    display: none;
+  }
+  .header__mobile {
+    display: none;
+  }
+  .header__menu {
+    display: block;
+  }
+  .header-contact__item {
+    display: block;
+  }
+  .header {
+    border-bottom: 1px solid #ececec;
+  }
+  .header__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .header__nav {
+    display: flex;
+    align-items: center;
+  }
+  .header__menu {
+    display: flex;
+  }
+  .header__item {
+    display: block;
+    animation-duration: 250ms;
+    animation-delay: 500ms;
+  }
+  .header__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .header__link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--color-menu);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__link-curent {
+    display: block;
+    position: relative;
+    color: var(--color-accent);
+  }
+  .header__link-curent::after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    bottom: -1px;
+    display: block;
+    height: 4px;
+    width: 100%;
+    border-radius: 2px;
+    background-color: var(--color-accent);
+    transform: scaleY(1) translateY(0px);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__link-curent:hover::after {
+    display: block;
+    position: absolute;
+    transform: scaleY(0.5) translateY(-35px);
+  }
+  .header-contact__list {
+    margin-left: auto;
+  }
+  .header-contact__list:hover, .header-contact__list:focus {
+    color: var(--color-accent);
+    fill: var(--color-accent);
+  }
+  .header-contact__item {
+    display: flex;
+    align-items: center;
+  }
+  .header-contact__link {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--color-menu-contakt);
+    fill: var(--color-menu-contakt);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header-contact__link:hover, .header-contact__link:focus {
+    color: var(--color-accent);
+    fill: var(--color-accent);
+  }
+  .header-contact__svg {
+    margin-right: 10px;
+  }
 }
 
-.burger-btn {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  line-height: 0;
-  cursor: pointer;
-}
-
-.burger-btn__icon {
-  width: 40px;
-  height: 40px;
-  fill: var(--color-title);
-}
-
-.burger-btn__icon:hover, .burger-btn__icon:focus {
-  fill: var(--color-accent);
-}
-
-.header__mobile {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 16px;
-  padding-bottom: 16px;
+@media screen and (min-width: 1200px) {
+  .header-contact__list {
+    display: flex;
+  }
+  .header-contact__item {
+    margin-right: 50px;
+  }
 }
 
 .hero {
@@ -869,6 +1110,18 @@ img {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .section-we-do {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-we-do {
+    display: block;
+  }
+}
+
 .section-we-do {
   padding-top: 0;
 }
@@ -900,7 +1153,6 @@ img {
   left: 0;
   padding: 27px 0;
   width: 100%;
-  min-height: 70px;
   margin-top: 0px;
   margin-bottom: 0px;
   font-size: 14px;
@@ -1381,6 +1633,7 @@ img {
     max-width: 231px;
     margin-top: 0;
     margin-bottom: 0;
+    text-align: left;
   }
   .contact-list {
     display: block;
