--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -3,7 +3,7 @@
   left: 0;
   top: 0;
   width: 100vw;
-  height: 100vw;
+  height: 100vh;
   background-color: #ffff;
   z-index: 100;
 
@@ -23,11 +23,11 @@
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    height: 100%;
-    padding-top: 48px;
+    padding-top: 38px;
     padding-left: 40px;
-    padding-bottom: 48px;
+    padding-bottom: 38px;
   }
+
   &__close-btn {
     position: absolute;
     top: 25px;
@@ -57,12 +57,12 @@
   }
 
   &__item:not(:last-child) {
-    margin-bottom: 32px;
+    margin-bottom: 22px;
   }
   &__link {
     font-weight: 500;
-    font-size: 40px;
-    line-height: 1.18;
+    font-size: 30px;
+    line-height: 1.16;
     letter-spacing: 0.02em;
     color: var(--color-title);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -76,20 +76,20 @@
     color: var(--color-accent);
   }
   &__contact-list {
-    margin-bottom: 64px;
+    margin-bottom: 44px;
   }
 
   &__contact-item:not(:last-child) {
-    margin-bottom: 32px;
+    margin-bottom: 10px;
   }
 
   &__contact-link {
     font-weight: 500;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 1.17;
     letter-spacing: 0.02em;
     color: var(--color-title);
-    margin-bottom: 32px;
+    margin-bottom: 22px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
@@ -100,7 +100,7 @@
 
   &__contact-link-tel {
     font-weight: 500;
-    font-size: 34px;
+    font-size: 24px;
     line-height: 1.18;
     letter-spacing: 0.02em;
     color: var(--color-accent);
@@ -114,68 +114,342 @@
 
     color: var(--color-accent);
   }
-  &__soc-item:not(:first-child) {
-    &::after {
-      position: absolute;
-      top: 0;
-      transform: translateX(-10px);
-      display: block;
-      content: "";
-      width: 1px;
-      height: 22px;
-      background-color: rgba(33, 33, 33, 0.2);
-      flex-shrink: 0;
-      margin-right: 40px;
-    }
-  }
-
   &__soc-list {
     position: relative;
-    display: flex;
-  }
-  &__soc-item:not(:last-child) {
-    margin-right: 20px;
+    // display: flex;
+    // flex-direction: column;
   }
 }
-@media screen and (max-width: 479px) {
+
+@media screen and (min-width: 390px) and (max-width: 767px) {
   .mobile-menu {
-    &__container {
-      padding-top: 30px;
-      padding-left: 30px;
-      padding-bottom: 30px;
-    }
-    &__link {
-      font-size: 30px;
-      line-height: 1.16;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffff;
+    z-index: 100;
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &.is-open {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: auto;
     }
 
+    &__container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      position: relative;
+      padding-top: 38px;
+      padding-left: 40px;
+      padding-bottom: 38px;
+    }
+    &__close-btn {
+      position: absolute;
+      top: 25px;
+      right: 26px;
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      line-height: 0;
+      cursor: pointer;
+      background-color: transparent;
+      border: none;
+      padding: 0;
+      line-height: 0;
+      width: 19px;
+      height: 19px;
+    }
+    &__icon {
+      width: 19px;
+      height: 19px;
+      fill: var(--color-title);
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        fill: var(--color-accent);
+      }
+    }
+
+    &__item:not(:last-child) {
+      margin-bottom: 22px;
+    }
+    &__link {
+      font-weight: 500;
+      font-size: 30px;
+      line-height: 1.12;
+      letter-spacing: 0.02em;
+      color: var(--color-title);
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        color: var(--color-accent);
+      }
+    }
+    &__link_current {
+      color: var(--color-accent);
+    }
     &__contact-list {
-      margin-bottom: 44px;
+      margin-bottom: 54px;
     }
 
     &__contact-item:not(:last-child) {
-      margin-bottom: 10px;
-    }
-
-    &__contact-link {
-      font-size: 20px;
       margin-bottom: 22px;
     }
 
+    &__contact-link {
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 1.17;
+      letter-spacing: 0.02em;
+      color: var(--color-title);
+      margin-bottom: 22px;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        color: var(--color-accent);
+      }
+    }
+
     &__contact-link-tel {
-      font-size: 24px;
+      font-weight: 500;
+      font-size: 30px;
+      line-height: 1.18;
+      letter-spacing: 0.02em;
+      color: var(--color-accent);
     }
 
     &__soc-link {
-      font-size: 15px;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 1.22;
+      letter-spacing: 0.02em;
+
+      color: var(--color-accent);
+    }
+    &__soc-item:not(:last-child) {
+      margin-right: 20px;
     }
     &__soc-item:not(:first-child) {
-      height: 18px;
-      margin-right: 38px;
+      &::after {
+        position: absolute;
+        top: 0;
+        transform: translateX(-10px);
+        display: block;
+        content: "";
+        width: 1px;
+        height: 22px;
+        background-color: rgba(33, 33, 33, 0.2);
+        flex-shrink: 0;
+        margin-right: 40px;
+      }
     }
 
-    &__soc-item:not(:last-child) {
-      margin-right: 16px;
+    &__soc-list {
+      position: relative;
+      display: flex;
     }
   }
 }
+// @media screen and (min-width: 320px) and (max-width: 400px) {
+//   .mobile-menu {
+//     &__link {
+//       font-size: 30px;
+//       line-height: 1.16;
+//     }
+
+//     &__contact-list {
+//       margin-bottom: 44px;
+//     }
+
+//     &__contact-item:not(:last-child) {
+//       margin-bottom: 10px;
+//     }
+
+//     &__contact-link {
+//       font-size: 20px;
+//       margin-bottom: 22px;
+//     }
+
+//     &__contact-link-tel {
+//       font-size: 24px;
+//     }
+//     &__soc-list {
+//       display: flex;
+//       flex-direction: column;
+//     }
+//     &__soc-link {
+//       font-size: 18px;
+//     }
+
+//     &__soc-item:not(:last-child) {
+//       margin-bottom: 16px;
+//     }
+//     &__soc-item:not(:first-child) {
+//       &::after {
+//         position: absolute;
+//         // left: 0;
+//         // transform: translateY(-10px);
+//         display: block;
+//         content: "";
+//         width: 1px;
+//         height: 22px;
+//         background-color: rgba(33, 33, 33, 0.2);
+//         flex-shrink: 0;
+//         // margin-right: 40px;
+//       }
+//     }
+//   }
+// }
+
+// @media screen and (min-width: 380px) and (max-width: 480px) {
+//   .mobile-menu {
+//     position: fixed;
+//     left: 0;
+//     top: 0;
+//     width: 100vw;
+//     height: 100vw;
+//     background-color: #ffff;
+//     z-index: 100;
+
+//     opacity: 0;
+//     visibility: hidden;
+//     pointer-events: none;
+//     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//     &.is-open {
+//       opacity: 1;
+//       visibility: visible;
+//       pointer-events: auto;
+//     }
+
+//     &__container {
+//       display: flex;
+//       flex-direction: column;
+//       justify-content: space-between;
+//       position: relative;
+//       height: 100%;
+//       padding-top: 48px;
+//       padding-left: 40px;
+//       padding-bottom: 48px;
+//     }
+//     &__close-btn {
+//       position: absolute;
+//       top: 25px;
+//       right: 26px;
+//       background-color: transparent;
+//       border: none;
+//       padding: 0;
+//       line-height: 0;
+//       cursor: pointer;
+//       background-color: transparent;
+//       border: none;
+//       padding: 0;
+//       line-height: 0;
+//       width: 19px;
+//       height: 19px;
+//     }
+//     &__icon {
+//       width: 19px;
+//       height: 19px;
+//       fill: var(--color-title);
+//       transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//       &:hover,
+//       &:focus {
+//         fill: var(--color-accent);
+//       }
+//     }
+
+//     &__item:not(:last-child) {
+//       margin-bottom: 32px;
+//     }
+//     &__link {
+//       font-weight: 500;
+//       font-size: 40px;
+//       line-height: 1.18;
+//       letter-spacing: 0.02em;
+//       color: var(--color-title);
+//       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//       &:hover,
+//       &:focus {
+//         color: var(--color-accent);
+//       }
+//     }
+//     &__link_current {
+//       color: var(--color-accent);
+//     }
+//     &__contact-list {
+//       margin-bottom: 64px;
+//     }
+
+//     &__contact-item:not(:last-child) {
+//       margin-bottom: 32px;
+//     }
+
+//     &__contact-link {
+//       font-weight: 500;
+//       font-size: 24px;
+//       line-height: 1.17;
+//       letter-spacing: 0.02em;
+//       color: var(--color-title);
+//       margin-bottom: 32px;
+//       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//       &:hover,
+//       &:focus {
+//         color: var(--color-accent);
+//       }
+//     }
+
+//     &__contact-link-tel {
+//       font-weight: 500;
+//       font-size: 34px;
+//       line-height: 1.18;
+//       letter-spacing: 0.02em;
+//       color: var(--color-accent);
+//     }
+
+//     &__soc-link {
+//       font-weight: 500;
+//       font-size: 18px;
+//       line-height: 1.22;
+//       letter-spacing: 0.02em;
+
+//       color: var(--color-accent);
+//     }
+//     &__soc-item:not(:first-child) {
+//       &::after {
+//         position: absolute;
+//         top: 0;
+//         transform: translateX(-10px);
+//         display: block;
+//         content: "";
+//         width: 1px;
+//         height: 22px;
+//         background-color: rgba(33, 33, 33, 0.2);
+//         flex-shrink: 0;
+//         margin-right: 40px;
+//       }
+//     }
+
+//     &__soc-list {
+//       position: relative;
+//       display: flex;
+//     }
+//     &__soc-item:not(:last-child) {
+//       margin-right: 20px;
+//     }
+//   }
+// }
