--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,8 +1,16 @@
+@media screen and (max-width: 1199px) {
+  .input-data-form {
+    padding-left: 40px;
+    width: 370px;
+    height: 40px;
+  }
+}
+
 .modal-form {
   display: inline-block;
   padding-top: 40px;
-  padding-left: 41px;
-  padding-right: 39px;
+  padding-left: 40px;
+  padding-right: 40px;
 
   &-title {
     display: block;
@@ -54,13 +62,15 @@
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.input-data-form {
-  padding-left: 42px;
-  width: 448px;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 1200px) {
+  .input-data-form {
+    padding-left: 42px;
+    width: 448px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .input-data-form:focus ~ .user-icon-form,
