--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,145 +1,145 @@
-.header__menu {
-  display: none;
-}
-.header-contact__item {
-  display: none;
-}
-.burger-btn {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-  line-height: 0;
-  cursor: pointer;
-
-  &__icon {
-    width: 40px;
-    height: 40px;
-    fill: var(--color-title);
-    &:hover,
-    &:focus {
-      fill: var(--color-accent);
-    }
-  }
-}
-
-.header__mobile {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
-
-// .header {
-//   border-bottom: 1px solid #ececec;
-//   &__container {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//   }
-
-//   &__nav {
-//     display: flex;
-//     align-items: center;
-//   }
-//   &__menu {
-//     display: flex;
-//   }
-
-//   &__item {
-//     display: block;
-//     animation-duration: 250ms;
-//     animation-delay: 500ms;
-
-//     &:not(:last-child) {
-//       margin-right: 50px;
-//     }
-//   }
+// .header__menu {
+//   display: none;
 // }
-
-// .header__link {
-//   @extend %link;
-
-//   display: block;
-
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-
-//   font-size: 14px;
-//   font-weight: 500;
-//   line-height: 1.17;
-//   letter-spacing: 0.02em;
-//   text-align: left;
-//   color: var(--color-menu);
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//   &-curent {
-//     display: block;
-//     position: relative;
-
-//     color: var(--color-accent);
-
-//     &::after {
-//       content: "";
-//       display: inline-block;
-//       position: absolute;
-//       right: 0;
-//       bottom: -1px;
-//       display: block;
-//       height: 4px;
-//       width: 100%;
-//       border-radius: 2px;
-//       background-color: var(--color-accent);
-//       transform: scaleY(1) translateY(0px);
-//       transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     }
-
-//     &:hover::after {
-//       display: block;
-//       position: absolute;
-//       transform: scaleY(0.5) translateY(-35px);
-//     }
-//   }
+// .header-contact__item {
+//   display: none;
 // }
+// .header__mobile {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   padding-top: 16px;
+//   padding-bottom: 16px;
+// }
+// .burger-btn {
+//   background-color: transparent;
+//   border: none;
+//   padding: 0;
+//   line-height: 0;
+//   cursor: pointer;
 
-// .header-contact {
-//   &__list {
-//     display: flex;
-//     margin-left: auto;
-
+//   &__icon {
+//     width: 40px;
+//     height: 40px;
+//     fill: var(--color-title);
 //     &:hover,
 //     &:focus {
-//       color: var(--color-accent);
 //       fill: var(--color-accent);
 //     }
 //   }
-//   &__item {
-//     display: flex;
-//     align-items: center;
-//     margin-right: 50px;
-//   }
-
-//   &__link {
-//     @extend %link;
-//     display: flex;
-//     align-items: center;
-//     font-size: 14px;
-//     font-weight: 500;
-//     line-height: 1.14;
-//     letter-spacing: 0.02em;
-//     text-align: left;
-//     color: var(--color-menu-contakt);
-//     fill: var(--color-menu-contakt);
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     &:hover,
-//     &:focus {
-//       color: var(--color-accent);
-//       fill: var(--color-accent);
-//     }
-//   }
-//   &__svg {
-//     margin-right: 10px;
-//   }
 // }
+
+// // .header {
+
+// //   border-bottom: 1px solid #ececec;
+// //   &__container {
+// //     display: flex;
+// //     align-items: center;
+// //     justify-content: space-between;
+// //   }
+
+// //   &__nav {
+// //     display: flex;
+// //     align-items: center;
+// //   }
+// //   &__menu {
+// //     display: flex;
+// //   }
+
+// //   &__item {
+// //     display: block;
+// //     animation-duration: 250ms;
+// //     animation-delay: 500ms;
+
+// //     &:not(:last-child) {
+// //       margin-right: 50px;
+// //     }
+// //   }
+// // }
+
+// // .header__link {
+// //   @extend %link;
+
+// //   display: block;
+
+// //   padding-top: 32px;
+// //   padding-bottom: 32px;
+
+// //   font-size: 14px;
+// //   font-weight: 500;
+// //   line-height: 1.17;
+// //   letter-spacing: 0.02em;
+// //   text-align: left;
+// //   color: var(--color-menu);
+// //   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+// //     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+// //   &-curent {
+// //     display: block;
+// //     position: relative;
+
+// //     color: var(--color-accent);
+
+// //     &::after {
+// //       content: "";
+// //       display: inline-block;
+// //       position: absolute;
+// //       right: 0;
+// //       bottom: -1px;
+// //       display: block;
+// //       height: 4px;
+// //       width: 100%;
+// //       border-radius: 2px;
+// //       background-color: var(--color-accent);
+// //       transform: scaleY(1) translateY(0px);
+// //       transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// //     }
+
+// //     &:hover::after {
+// //       display: block;
+// //       position: absolute;
+// //       transform: scaleY(0.5) translateY(-35px);
+// //     }
+// //   }
+// // }
+
+// // .header-contact {
+// //   &__list {
+// //     display: flex;
+// //     margin-left: auto;
+
+// //     &:hover,
+// //     &:focus {
+// //       color: var(--color-accent);
+// //       fill: var(--color-accent);
+// //     }
+// //   }
+// //   &__item {
+// //     display: flex;
+// //     align-items: center;
+// //     margin-right: 50px;
+// //   }
+
+// //   &__link {
+// //     @extend %link;
+// //     display: flex;
+// //     align-items: center;
+// //     font-size: 14px;
+// //     font-weight: 500;
+// //     line-height: 1.14;
+// //     letter-spacing: 0.02em;
+// //     text-align: left;
+// //     color: var(--color-menu-contakt);
+// //     fill: var(--color-menu-contakt);
+// //     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+// //       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// //     &:hover,
+// //     &:focus {
+// //       color: var(--color-accent);
+// //       fill: var(--color-accent);
+// //     }
+// //   }
+// //   &__svg {
+// //     margin-right: 10px;
+// //   }
+// // }
