--- a/sass/layout/_we-do.scss
+++ b/sass/layout/_we-do.scss
@@ -1,3 +1,13 @@
+@media screen and (max-width: 1199px) {
+  .section-we-do {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section-we-do {
+    display: block;
+  }
+}
 .section-we-do {
   padding-top: 0;
   &__list {
@@ -20,7 +30,6 @@
     padding: 27px 0;
 
     width: 100%;
-    min-height: 70px;
 
     @include title-h3($mt: 0px, $mb: 0px, $t-align: center, $color: #ffffff);
 
