--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,7 +13,7 @@
 @import "./components/mobile-menu";
 @import "./components/current";
 @import "./components/modal-window";
-@import "./layout/header";
+@import "./layout/header2";
 @import "./layout/hero";
 @import "./layout/the-best";
 @import "./layout/we-do";
