--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -27,6 +27,9 @@
     padding-left: 40px;
     padding-bottom: 38px;
   }
+  .mobile-menu__up {
+    margin-bottom: 200px;
+  }
 
   &__close-btn {
     position: absolute;
