--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,145 +1,176 @@
-// .header__menu {
-//   display: none;
-// }
-// .header-contact__item {
-//   display: none;
-// }
-// .header__mobile {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   padding-top: 16px;
-//   padding-bottom: 16px;
-// }
-// .burger-btn {
-//   background-color: transparent;
-//   border: none;
-//   padding: 0;
-//   line-height: 0;
-//   cursor: pointer;
+@media screen and (max-width: 767px) {
+  .header__menu {
+    display: none;
+  }
+  .header-contact__item {
+    display: none;
+  }
+  .header-contact__list {
+    display: none;
+  }
 
-//   &__icon {
-//     width: 40px;
-//     height: 40px;
-//     fill: var(--color-title);
-//     &:hover,
-//     &:focus {
-//       fill: var(--color-accent);
-//     }
-//   }
-// }
+  .header__mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
 
-// // .header {
+  .burger-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+    cursor: pointer;
 
-// //   border-bottom: 1px solid #ececec;
-// //   &__container {
-// //     display: flex;
-// //     align-items: center;
-// //     justify-content: space-between;
-// //   }
+    &__icon {
+      width: 40px;
+      height: 40px;
+      fill: var(--color-title);
+      &:hover,
+      &:focus {
+        fill: var(--color-accent);
+      }
+    }
+  }
+}
 
-// //   &__nav {
-// //     display: flex;
-// //     align-items: center;
-// //   }
-// //   &__menu {
-// //     display: flex;
-// //   }
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+  .burger-btn {
+    display: none;
+  }
+  .header__mobile {
+    display: block;
+  }
+  .header__menu {
+    display: block;
+  }
+  .header-contact__item {
+    display: block;
+  }
 
-// //   &__item {
-// //     display: block;
-// //     animation-duration: 250ms;
-// //     animation-delay: 500ms;
+  .header {
+    border-bottom: 1px solid #ececec;
+    &__container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
 
-// //     &:not(:last-child) {
-// //       margin-right: 50px;
-// //     }
-// //   }
-// // }
+    &__nav {
+      display: flex;
+      align-items: center;
+    }
+    &__menu {
+      display: flex;
+    }
 
-// // .header__link {
-// //   @extend %link;
+    &__item {
+      display: block;
+      animation-duration: 250ms;
+      animation-delay: 500ms;
 
-// //   display: block;
+      &:not(:last-child) {
+        margin-right: 50px;
+      }
+    }
+  }
 
-// //   padding-top: 32px;
-// //   padding-bottom: 32px;
+  .header__link {
+    display: block;
 
-// //   font-size: 14px;
-// //   font-weight: 500;
-// //   line-height: 1.17;
-// //   letter-spacing: 0.02em;
-// //   text-align: left;
-// //   color: var(--color-menu);
-// //   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-// //     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding-top: 32px;
+    padding-bottom: 32px;
 
-// //   &-curent {
-// //     display: block;
-// //     position: relative;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--color-menu);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-// //     color: var(--color-accent);
+    &-curent {
+      display: block;
+      position: relative;
 
-// //     &::after {
-// //       content: "";
-// //       display: inline-block;
-// //       position: absolute;
-// //       right: 0;
-// //       bottom: -1px;
-// //       display: block;
-// //       height: 4px;
-// //       width: 100%;
-// //       border-radius: 2px;
-// //       background-color: var(--color-accent);
-// //       transform: scaleY(1) translateY(0px);
-// //       transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// //     }
+      color: var(--color-accent);
 
-// //     &:hover::after {
-// //       display: block;
-// //       position: absolute;
-// //       transform: scaleY(0.5) translateY(-35px);
-// //     }
-// //   }
-// // }
+      &::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        bottom: -1px;
+        display: block;
+        height: 4px;
+        width: 100%;
+        border-radius: 2px;
+        background-color: var(--color-accent);
+        transform: scaleY(1) translateY(0px);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      }
 
-// // .header-contact {
-// //   &__list {
-// //     display: flex;
-// //     margin-left: auto;
+      &:hover::after {
+        display: block;
+        position: absolute;
+        transform: scaleY(0.5) translateY(-35px);
+      }
+    }
+  }
 
-// //     &:hover,
-// //     &:focus {
-// //       color: var(--color-accent);
-// //       fill: var(--color-accent);
-// //     }
-// //   }
-// //   &__item {
-// //     display: flex;
-// //     align-items: center;
-// //     margin-right: 50px;
-// //   }
+  .header-contact {
+    &__list {
+      // display: flex;
+      margin-left: auto;
 
-// //   &__link {
-// //     @extend %link;
-// //     display: flex;
-// //     align-items: center;
-// //     font-size: 14px;
-// //     font-weight: 500;
-// //     line-height: 1.14;
-// //     letter-spacing: 0.02em;
-// //     text-align: left;
-// //     color: var(--color-menu-contakt);
-// //     fill: var(--color-menu-contakt);
-// //     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-// //       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// //     &:hover,
-// //     &:focus {
-// //       color: var(--color-accent);
-// //       fill: var(--color-accent);
-// //     }
-// //   }
-// //   &__svg {
-// //     margin-right: 10px;
-// //   }
-// // }
+      &:hover,
+      &:focus {
+        color: var(--color-accent);
+        fill: var(--color-accent);
+      }
+    }
+    &__item {
+      display: flex;
+      align-items: center;
+      // margin-right: 50px;
+    }
+
+    &__link {
+      display: flex;
+      align-items: center;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 1.14;
+      letter-spacing: 0.02em;
+      text-align: left;
+      color: var(--color-menu-contakt);
+      fill: var(--color-menu-contakt);
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:focus {
+        color: var(--color-accent);
+        fill: var(--color-accent);
+      }
+    }
+    &__svg {
+      margin-right: 10px;
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-contact {
+    &__list {
+      display: flex;
+    }
+    &__item {
+      margin-right: 50px;
+    }
+  }
+}
