--- a/css/main.css
+++ b/css/main.css
@@ -333,14 +333,6 @@ img {
   fill: var(--color-accent);
 }
 
-@media screen and (max-width: 1199px) {
-  .input-data-form {
-    padding-left: 40px;
-    width: 370px;
-    height: 40px;
-  }
-}
-
 .modal-form {
   display: inline-block;
   padding-top: 40px;
@@ -353,7 +345,7 @@ img {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--color-title);
@@ -394,15 +386,13 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 1200px) {
-  .input-data-form {
-    padding-left: 42px;
-    width: 448px;
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+.input-data-form {
+  padding-left: 40px;
+  width: 370px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-data-form:focus ~ .user-icon-form,
@@ -410,8 +400,7 @@ img {
   fill: var(--color-accent);
 }
 
-.input-data-form:hover,
-.input-data-form:focus {
+.input-data-form:hover, .input-data-form:focus {
   outline: none;
   border: 1px solid var(--color-accent);
 }
@@ -446,47 +435,6 @@ img {
   border: 1px solid var(--color-accent);
 }
 
-.checkbox-convention-input {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.icon {
-  display: inline-block;
-  width: 16px;
-  height: 15px;
-  margin-right: 7px;
-  box-shadow: inset 0 0 0 2px #000000;
-  background-color: #fff;
-  border-radius: 4px;
-}
-
-.checkbox-convention-input:checked + .icon {
-  background-color: var(--color-accent);
-  background-image: url(../img/loud/svg/form-check.svg);
-  box-shadow: inset 0 0 0 0px #000000;
-  background-size: contain;
-  background-origin: border-box;
-  background-position: center;
-  background-size: cover;
-  align-items: center;
-}
-
-.checkbox-convention-input:hover + .icon {
-  cursor: pointer;
-}
-
-.checkbox-convention-input:focus + .icon {
-  box-shadow: 0 0 0 1px #000000;
-  border: 1px solid var(--color-accent);
-}
-
 .checkbox-convention-txt {
   display: block;
   margin-bottom: 30px;
@@ -502,8 +450,8 @@ img {
 
 .check-txt {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   margin-left: 0;
   margin-right: 0;
@@ -511,11 +459,78 @@ img {
 
 .convention-accent {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--color-accent);
   text-decoration: 0.03em underline var(--color-accent);
+}
+
+.user-icon-form {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .user-icon-form {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .input-data-form {
+    padding-left: 42px;
+    width: 448px;
+    height: 40px;
+  }
+  .checkbox-convention-input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+  .icon {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+    box-shadow: inset 0 0 0 2px #000000;
+    background-color: #fff;
+    border-radius: 4px;
+  }
+  .checkbox-convention-input:checked + .icon {
+    background-color: var(--color-accent);
+    background-image: url(../img/loud/svg/form-check.svg);
+    box-shadow: inset 0 0 0 0px #000000;
+    background-size: contain;
+    background-origin: border-box;
+    background-position: center;
+    background-size: cover;
+    align-items: center;
+  }
+  .checkbox-convention-input:hover + .icon {
+    cursor: pointer;
+  }
+  .checkbox-convention-input:focus + .icon {
+    box-shadow: 0 0 0 1px #000000;
+    border: 1px solid var(--color-accent);
+  }
+  .check-txt {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+  .convention-accent {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .mobile-menu {
@@ -547,10 +562,11 @@ img {
   padding-left: 40px;
   padding-bottom: 38px;
   max-width: 767px;
+  height: 100%;
 }
 
-.mobile-menu .mobile-menu__up {
-  margin-bottom: 200px;
+.mobile-menu__up {
+  margin-bottom: 30px;
 }
 
 .mobile-menu__close-btn {
@@ -657,11 +673,6 @@ img {
     visibility: hidden;
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
   }
   .mobile-menu__container {
     display: flex;
@@ -821,21 +832,14 @@ img {
 }
 
 @media screen and (max-width: 767px) {
+  .header {
+    border-bottom: 1px solid #ececec;
+  }
   .header__menu {
     display: none;
   }
   .header-contact__item {
     display: none;
-  }
-  .mobile-menu {
-    display: block;
-  }
-  .header__mobile {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
   }
   .burger-btn {
     background-color: transparent;
@@ -851,6 +855,16 @@ img {
   }
   .burger-btn__icon:hover, .burger-btn__icon:focus {
     fill: var(--color-accent);
+  }
+  .mobile-menu {
+    display: block;
+  }
+  .header__mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 }
 
@@ -904,6 +918,9 @@ img {
     text-align: left;
     color: var(--color-menu);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__link:hover, .header__link:focus {
+    color: var(--color-accent);
   }
   .header__link-curent {
     display: block;
@@ -1251,15 +1268,7 @@ img {
     margin-left: -30px;
     margin-top: -30px;
   }
-  .team__item {
-    margin-left: 30px;
-    margin-top: 30px;
-    background: var(--bgr-team-button-portfolio);
-    background: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-  }
-  .team__item__title {
+  .team__title {
     justify-content: center;
     margin-bottom: 50px;
     font-size: 36px;
@@ -1269,16 +1278,24 @@ img {
     text-align: center;
     color: var(--color-title);
   }
+  .team__item {
+    margin-left: 30px;
+    margin-top: 30px;
+    background: var(--bgr-team-button-portfolio);
+    background: #ffffff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
   .team__description {
     padding-top: 30px;
     padding-bottom: 30px;
   }
   .team__title {
     justify-content: center;
-    margin-bottom: 30px;
-    font-size: 28px;
+    margin-bottom: 50px;
+    font-size: 36px;
     font-weight: 700;
-    line-height: 1.18;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-align: center;
     color: var(--color-title);
@@ -1378,11 +1395,21 @@ img {
     flex-basis: calc((100% - 6 * var(--card-set-gap)) / 6);
     margin-left: var(--card-set-gap);
   }
+  .customers__title {
+    justify-content: center;
+    margin-bottom: 50px;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-align: center;
+    color: var(--color-title);
+  }
 }
 
 .portfolio-button__list {
   display: flex;
-  margin-bottom: 56px;
+  margin-bottom: 40px;
   flex-wrap: wrap;
 }
 
@@ -1415,7 +1442,16 @@ img {
 
 @media screen and (min-width: 768px) {
   .portfolio-button__list {
+    margin-bottom: 30px;
+  }
+  .portfolio-button__list {
     justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-button__list {
+    margin-bottom: 50px;
   }
 }
 
@@ -1506,6 +1542,7 @@ img {
     flex-basis: calc((100% - 2 * var(--card-set-gap)) / 2);
     margin-left: var(--card-set-gap);
     margin-top: var(--card-set-gap);
+    margin-bottom: 0;
   }
 }
 
@@ -1570,6 +1607,10 @@ img {
   color: var(--color-accent);
 }
 
+.contact-list {
+  margin-bottom: 8px;
+}
+
 .subscribe-form {
   margin-top: 60px;
 }
@@ -1620,6 +1661,10 @@ img {
   }
   .soc {
     display: inline-block;
+  }
+  .soc__title {
+    margin-top: 0;
+    text-align: center;
   }
   .subscribe-form {
     display: block;
