--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -17,7 +17,6 @@
     visibility: visible;
     pointer-events: auto;
   }
-
   &__container {
     display: flex;
     flex-direction: column;
@@ -27,9 +26,10 @@
     padding-left: 40px;
     padding-bottom: 38px;
     max-width: 767px;
+    height: 100%;
   }
-  .mobile-menu__up {
-    margin-bottom: 200px;
+  &__up {
+    margin-bottom: 30px;
   }
 
   &__close-btn {
@@ -139,12 +139,6 @@
     visibility: hidden;
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &.is-open {
-      opacity: 1;
-      visibility: visible;
-      pointer-events: auto;
-    }
 
     &__container {
       display: flex;
