--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -1,11 +1,3 @@
-@media screen and (max-width: 1199px) {
-  .input-data-form {
-    padding-left: 40px;
-    width: 370px;
-    height: 40px;
-  }
-}
-
 .modal-form {
   display: inline-block;
   padding-top: 40px;
@@ -18,7 +10,7 @@
 
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
 
@@ -54,7 +46,6 @@
   display: block;
   margin-top: 4px;
 }
-
 .user-icon-form {
   position: absolute;
   top: 50%;
@@ -62,26 +53,23 @@
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 1200px) {
-  .input-data-form {
-    padding-left: 42px;
-    width: 448px;
-    height: 40px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.input-data-form {
+  padding-left: 40px;
+  width: 370px;
+  height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:focus ~ .user-icon-form,
+  &:hover ~ .user-icon-form {
+    fill: var(--color-accent);
   }
-}
-
-.input-data-form:focus ~ .user-icon-form,
-.input-data-form:hover ~ .user-icon-form {
-  fill: var(--color-accent);
-}
-
-.input-data-form:hover,
-.input-data-form:focus {
-  outline: none;
-  border: 1px solid var(--color-accent);
+  &:hover,
+  &:focus {
+    outline: none;
+    border: 1px solid var(--color-accent);
+  }
 }
 
 .user-comment-area {
@@ -118,47 +106,6 @@
     border: 1px solid var(--color-accent);
   }
 }
-
-.checkbox-convention-input {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.icon {
-  display: inline-block;
-  width: 16px;
-  height: 15px;
-  margin-right: 7px;
-
-  box-shadow: inset 0 0 0 2px #000000;
-  background-color: #fff;
-  border-radius: 4px;
-
-  .checkbox-convention-input:checked + & {
-    background-color: var(--color-accent);
-    background-image: url(../img/loud/svg/form-check.svg);
-    box-shadow: inset 0 0 0 0px #000000;
-    background-size: contain;
-    background-origin: border-box;
-    background-position: center;
-    background-size: cover;
-    align-items: center;
-  }
-  .checkbox-convention-input:hover + & {
-    cursor: pointer;
-  }
-  .checkbox-convention-input:focus + & {
-    box-shadow: 0 0 0 1px #000000;
-    border: 1px solid var(--color-accent);
-  }
-}
-
 .checkbox-convention-txt {
   display: block;
   margin-bottom: 30px;
@@ -172,22 +119,93 @@
     cursor: pointer;
   }
 }
-
 .check-txt {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   margin-left: 0;
   margin-right: 0;
 }
-
 .convention-accent {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
 
   color: var(--color-accent);
   text-decoration: 0.03em underline var(--color-accent);
+}
+
+.user-icon-form {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1200px) {
+  .user-icon-form {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .input-data-form {
+    padding-left: 42px;
+    width: 448px;
+    height: 40px;
+  }
+
+  .checkbox-convention-input {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
+  .icon {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+
+    box-shadow: inset 0 0 0 2px #000000;
+    background-color: #fff;
+    border-radius: 4px;
+
+    .checkbox-convention-input:checked + & {
+      background-color: var(--color-accent);
+      background-image: url(../img/loud/svg/form-check.svg);
+      box-shadow: inset 0 0 0 0px #000000;
+      background-size: contain;
+      background-origin: border-box;
+      background-position: center;
+      background-size: cover;
+      align-items: center;
+    }
+    .checkbox-convention-input:hover + & {
+      cursor: pointer;
+    }
+    .checkbox-convention-input:focus + & {
+      box-shadow: 0 0 0 1px #000000;
+      border: 1px solid var(--color-accent);
+    }
+  }
+
+  .check-txt {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+
+  .convention-accent {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
