--- a/sass/layout/_customers.scss
+++ b/sass/layout/_customers.scss
@@ -66,5 +66,8 @@
       flex-basis: calc((100% - 6 * var(--card-set-gap)) / 6);
       margin-left: var(--card-set-gap);
     }
+    &__title {
+      @include title-h2();
+    }
   }
 }
