--- a/sass/layout/_header2.scss
+++ b/sass/layout/_header2.scss
@@ -1,21 +1,14 @@
 @media screen and (max-width: 767px) {
+  .header {
+    border-bottom: 1px solid #ececec;
+  }
   .header__menu {
     display: none;
   }
   .header-contact__item {
     display: none;
   }
-  .mobile-menu {
-    display: block;
-  }
 
-  .header__mobile {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 16px;
-    padding-bottom: 16px;
-  }
   .burger-btn {
     background-color: transparent;
     border: none;
@@ -32,6 +25,16 @@
         fill: var(--color-accent);
       }
     }
+  }
+  .mobile-menu {
+    display: block;
+  }
+  .header__mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 }
 
@@ -91,6 +94,11 @@
     letter-spacing: 0.02em;
     text-align: left;
     color: var(--color-menu);
+
+    &:hover,
+    &:focus {
+      color: var(--color-accent);
+    }
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
